# Files-Panel

./: .dockerignore  .env.example  .gitignore  AGENT_ONBOARDING.md  API.md  ARCHITECTURE.md  CONCEPTS.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  USAGE.md  WIREGUARD.md  WIREGUARD_BOOTSTRAP.md  docker-compose.yml  requirements.txt
.github/workflows/: publish-github-wiki.yml
app/: __init__.py  agent_main.py  main.py  manager_main.py  models.py
app/core/: __init__.py  auth.py  settings.py  storage.py  version.py
app/routes/: __init__.py  access.py  auth.py  bootstrap.py  files.py  resources.py  runtime.py  servers.py  system.py  updates.py
app/services/: __init__.py  access.py  common.py  files.py  remote_nodes.py  resources.py  runtime.py  servers.py  updates.py  wireguard_bootstrap.py
data/: servers.json
docs/: architecture.md
scripts/: agentctl.sh  bootstrap_wireguard.py  export_github_wiki.py  file-panel  file-panel-helper.sh  generate_token.py  install_agent.sh  install_agent_only.sh  install_manager.sh  readonly_system_helper.py  setup_agent_interactive.py  uninstall_agent.sh
src/: main.rs
static/: app.js  index.html  styles.css
static/js/: app.js  files.js  logs.js  resources.js  settings.js  shared.js
systemd/: files-agent-node.service  files-agent.service
wiki/: API-and-Auth.md  Architecture.md  Development.md  Home.md  Install-and-Roles.md  Node-Onboarding-and-WireGuard.md  Operations.md  _Sidebar.md
wireguard/: manager-wg0.example.conf
